# EarthGrid

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  beacons.json  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: TESTING.md  index.html  peers.json  storage-strategy.md
earthgrid/: __init__.py  bandwidth.py  beacon.py  catalog.py  cdse.py  chunk_store.py  cli.py  client.py  config.py  element84.py  federation.py  ingest.py  main.py  node_identity.py  openeo_gateway.py  processing.py  ratelimit.py  reconstruct.py  replication.py  source_users.py  stats.py  user_auth.py
earthgrid-core/: Cargo.toml  PYTHON_REFERENCE.py
earthgrid-core/src/: audit.rs  auth.rs  catalog.rs  chunk_store.rs  error.rs  lib.rs  main.rs
scripts/: migrate_to_spatial.py  update-peers.sh
tests/: test_beacon.py  test_catalog.py  test_chunk_store.py
