[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthgrid"
version = "0.1.0"
description = "Distributed storage and access for satellite imagery and Earth observation products"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "rasterio>=1.3",
    "aiofiles>=23.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
