[package]
name = "earthgrid-core"
version = "0.1.0"
edition = "2021"
description = "Distributed storage and processing for Earth observation data"
license = "EUPL-1.2"

[dependencies]
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
